conductor/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conductor
  labels:
    app.kubernetes.io/part-of: conductor
